# psi-ai-content-hub

./: .gitignore  .replit  AGENTS.md  ELECTRON_BUILD_GUIDE.md  README.md  README_PYTHON_API.md  __tmp_lines.py  encoding_check.js  line_refs.cjs  line_scan.cjs  package-lock.json  package.json  setup_backend.ps1  stdout  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
attached_assets/: Pasted--usr-bin-env-python3-Adjust-Video-Speed-to-Match-Audio-_1769946150186.txt  Pasted--usr-bin-env-python3-Script-to-download-audio-from-TikT_1769946075359.txt  Pasted--usr-bin-env-python3-Video-Trimming-Script-Trims-downlo_1769946145450.txt  Pasted--usr-bin-env-python3-YouTube-Video-Download-Module-Part_1769946096220.txt  Pasted-i-have-these-features-AI-video-content-generation-and-A_1769941991088.txt
client/: index.html
docs/: F5-TTS-memo.txt  REFER-BACKEND-IPC-DESIGN.md  REFER-CURRENT-DESIGN-F5TTS.md  REFER-FAST-TTS-DESIGN.md  app-description.md  axxx_bbb_ccc_dd_api_migration_map.md  axxx_bbb_ccc_dd_naming_policy.md  axxx_bbb_ccc_dd_symbol_rename_map.md  fast-tts-design.txt  image-finder-design.md  image-finder-tasklist.md  image_search.md  start-server.txt  (+1 more)
python_api/VieNeu-TTS/: README.md  pyproject.toml  requirements.txt  setup.py  simple_tts_test.py
python_api/VieNeu-TTS/app/: app.py  main.py
python_api/VieNeu-TTS/app/routers/: __init__.py  env.py  server.py  system.py  tts.py
python_api/VieNeu-TTS/app/services/: __init__.py  tts.py
python_api/VieNeu-TTS/refer/: app.py  vieneu_tts.py
python_api/VieNeu-TTS/vieneu/: core.py
python_api/VieNeu-TTS/vieneu-tts-sample/: config.yaml
vie-neu-tts-Vietnamese-English/: README.md  gradio_app.py  pyproject.toml  pyproject.toml.cpu
vie-neu-tts-Vietnamese-English/docker/: Dockerfile.cpu  Dockerfile.gpu
vie-neu-tts-Vietnamese-English/docs/: API_DESIGN.md  UI_DESIGN.md
vie-neu-tts-Vietnamese-English/fast_api/: README.md  main.py.backup  requirements.txt  start.sh
vie-neu-tts-Vietnamese-English/fast_api/static/css/: style.css
vie-neu-tts-Vietnamese-English/fast_api/static/js/: app.js  translations.js
vie-neu-tts-Vietnamese-English/fast_api/templates/: index.html
(+562 files in other folders)
