[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vieneu"
version = "1.1.7"
description = "Advanced on-device Vietnamese TTS with instant voice cloning"
readme = "LICENSE"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "phonemizer>=3.3.0",
    "neucodec>=0.0.4",
    "librosa>=0.11.0",
    "onnxruntime>=1.23.2",
    "datasets>=3.2.0",
    "perth>=0.2.0",
    "requests",
]

[tool.setuptools]
packages = ["vieneu", "vieneu_utils"]

[tool.setuptools.package-data]
vieneu_utils = ["*.json"]
